fix z-index elem issue

--- a/resources/sass/filter.scss
+++ b/resources/sass/filter.scss
@@ -4,3 +4,6 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.select2-container {
+    z-index: 999999;
+}
